--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,11 +7,9 @@
         "id": "6b81deb5af4fc9ff",
         "type": "leaf",
         "state": {
-          "type": "markdown",
+          "type": "kanban",
           "state": {
-            "file": "Android Developer Learning Path.md",
-            "mode": "source",
-            "source": false
+            "file": "Kanban/第一个一年计划.md"
           }
         }
       }
@@ -77,7 +75,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Android Developer Learning Path.md",
+                "file": "Kanban/第一个一年计划.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +92,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Android Developer Learning Path.md",
+                "file": "Kanban/第一个一年计划.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +115,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Android Developer Learning Path.md"
+                "file": "Kanban/第一个一年计划.md"
               }
             }
           }
@@ -130,6 +128,8 @@
   },
   "active": "6b81deb5af4fc9ff",
   "lastOpenFiles": [
+    "在Ubuntu上部署QT6开发环境.md",
+    "Android Developer Learning Path.md",
     "Git使用教程.md",
     "Linux常用软件安装.md",
     "C语言开发·[3]Qt开发.md",
@@ -137,8 +137,6 @@
     "Linux下配置clash.md",
     "在树莓派上配置Samba服务.md",
     "C语言开发·[2]Char的那些事.md",
-    "C语言开发·[1]数组移动的那些事.md",
-    "Kanban/第一个一年计划.md",
-    "笔记本风扇调速失效解决办法.md"
+    "C语言开发·[1]数组移动的那些事.md"
   ]
 }
