--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,10 +7,8 @@
         "id": "6b81deb5af4fc9ff",
         "type": "leaf",
         "state": {
-          "type": "kanban",
-          "state": {
-            "file": "Kanban/第一个一年计划.md"
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -75,7 +73,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Kanban/第一个一年计划.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -92,7 +89,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Kanban/第一个一年计划.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -114,9 +110,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "Kanban/第一个一年计划.md"
-              }
+              "state": {}
             }
           }
         ]
@@ -128,15 +122,15 @@
   },
   "active": "6b81deb5af4fc9ff",
   "lastOpenFiles": [
-    "在Ubuntu上部署QT6开发环境.md",
-    "Android Developer Learning Path.md",
-    "Git使用教程.md",
-    "Linux常用软件安装.md",
-    "C语言开发·[3]Qt开发.md",
-    "Linux入坑指南.md",
-    "Linux下配置clash.md",
-    "在树莓派上配置Samba服务.md",
-    "C语言开发·[2]Char的那些事.md",
-    "C语言开发·[1]数组移动的那些事.md"
+    "ESP32开发·[1.2]安装VSCode插件.md",
+    "ESP32开发·[1.1]Linux下部署ESP-IDF开发环境.md",
+    "Linux·[3]Linux下配置clash.md",
+    "Linux·[2]Linux常用软件安装.md",
+    "Linux·[1]Linux入坑指南.md",
+    "Linux·[0]从零开始安装Manjaro.md",
+    "STM32开发·[1.3]DSP功能.md",
+    "STM32开发·[1.2]笔记.md",
+    "STM32开发·[1.1]Linux下部署开发环境.md",
+    "WordPress·[1]在华为云上部署WordPress I.md"
   ]
 }
