--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,12 @@
         "id": "6b81deb5af4fc9ff",
         "type": "leaf",
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Linux·[5]利用frp进行SSH公网映射.md",
+            "mode": "source",
+            "source": false
+          }
         }
       }
     ],
@@ -73,6 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Linux·[5]利用frp进行SSH公网映射.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
+                "file": "Linux·[5]利用frp进行SSH公网映射.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -110,7 +116,9 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {}
+              "state": {
+                "file": "Linux·[5]利用frp进行SSH公网映射.md"
+              }
             }
           }
         ]
@@ -122,15 +130,15 @@
   },
   "active": "6b81deb5af4fc9ff",
   "lastOpenFiles": [
-    "ESP32开发·[1.2]安装VSCode插件.md",
-    "ESP32开发·[1.1]Linux下部署ESP-IDF开发环境.md",
-    "Linux·[3]Linux下配置clash.md",
-    "Linux·[2]Linux常用软件安装.md",
-    "Linux·[1]Linux入坑指南.md",
     "Linux·[0]从零开始安装Manjaro.md",
-    "STM32开发·[1.3]DSP功能.md",
-    "STM32开发·[1.2]笔记.md",
-    "STM32开发·[1.1]Linux下部署开发环境.md",
-    "WordPress·[1]在华为云上部署WordPress I.md"
+    "Linux·[5]利用frp进行SSH公网映射.md",
+    "Linux·[4]在Ubuntu上部署QT6开发环境.md",
+    "Linux·[3]Linux下配置clash.md",
+    "Linux·[1]Linux入坑指南.md",
+    "Linux·[2]Linux常用软件安装.md",
+    "FPGA开发笔记.md",
+    "Git使用教程.md",
+    "QSS学习笔记.md",
+    "C语言开发·[3]Qt开发.md"
   ]
 }
