docs: add new note

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -3,5 +3,6 @@
   "translucency": false,
   "cssTheme": "Minimal",
   "interfaceFontFamily": "HarmonyOS Sans SC",
-  "textFontFamily": "HarmonyOS Sans SC"
+  "textFontFamily": "HarmonyOS Sans SC",
+  "accentColor": ""
 }
